--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       2,000 calories a day is used for general nutrition advice.</p>
     </div>
   </div>
+
+  <div style= "text-align: center; padding:0.5rem">
+    *This tutorial project was created by <a href="https://www.freecodecamp org">freeCodeCamp</a> and is a part of their responsive Web Design certification course.
+   </div>
+
 </body>
 </html>
 
